[metadata]
name = openstack-cyborg
summary = Distributed Acceleration Management as a Service
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/cyborg/latest/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    cyborg
data_files =
    etc/cyborg =
        etc/cyborg/policy.yaml
        etc/cyborg/api-paste.ini

[entry_points]
oslo.policy.policies =
    cyborg.api = cyborg.policies:list_policies

console_scripts =
    cyborg-api = cyborg.cmd.api:main
    cyborg-conductor = cyborg.cmd.conductor:main
    cyborg-dbsync = cyborg.cmd.dbsync:main
    cyborg-agent = cyborg.cmd.agent:main
    cyborg-status = cyborg.cmd.status:main
wsgi_scripts =
    cyborg-wsgi-api = cyborg.api.wsgi_app:init_application

cyborg.database.migration_backend =
    sqlalchemy = cyborg.db.sqlalchemy.migration

cyborg.accelerator.driver =
    intel_fpga_driver = cyborg.accelerator.drivers.fpga.intel.driver:IntelFPGADriver
    inspur_fpga_driver = cyborg.accelerator.drivers.fpga.inspur.driver:InspurFPGADriver
    nvmf_spdk_driver = cyborg.accelerator.drivers.spdk.nvmf.nvmf:NVMFDRIVER
    nvidia_gpu_driver = cyborg.accelerator.drivers.gpu.nvidia.driver:NVIDIAGPUDriver
    fake_driver = cyborg.accelerator.drivers.fake:FakeDriver
    huawei_ascend_driver = cyborg.accelerator.drivers.aichip.huawei.ascend:AscendDriver
    intel_qat_driver = cyborg.accelerator.drivers.qat.intel.driver:IntelQATDriver
    intel_nic_driver = cyborg.accelerator.drivers.nic.intel.driver:IntelNICDriver

oslo.config.opts =
    cyborg = cyborg.conf.opts:list_opts
